--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ checkpoint04 ]
+    branches: [ checkopoint04 ]
   pull_request:
     branches: [ main ]
 
